test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-policy-without-orphan-downstream/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clone-sync-delete-no-orphan
