test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-policy-without-orphan-downstream/permissions.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:secrets-kqo2
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
rules:
- apiGroups:
  - ''
  resources:
  - secrets
  verbs:
  - get
  - list
  - watch
  - create
  - update
  - delete
