test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-policy-without-orphan-downstream/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: clone-sync-delete-policy-without-orphan-downstream
  namespace: default
type: Opaque
