test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-policy-without-orphan-downstream/secret-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: clone-sync-delete-policy-without-orphan-downstream
  namespace: clone-sync-delete-no-orphan
type: Opaque
