test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-policy-without-orphan-downstream/secret-error.yaml
apiVersion: v1
kind: Secret
metadata:
  name: clone-sync-delete-policy-without-orphan-downstream
  namespace: clone-sync-delete-no-orphan
