test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-policy-without-orphan-downstream/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: clone-sync-delete-policy-without-orphan-downstream
spec:
  concurrent: false
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: clone-sync-delete-policy-without-orphan-downstream
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: create the source
    try:
    - apply:
        file: source.yaml
  - name: create the trigger
    try:
    - apply:
        file: namespace.yaml
  - name: check that the secret is generated
    try:
    - assert:
        file: secret-assert.yaml
  - name: delete the policy
    try:
    - delete:
        ref:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: GeneratingPolicy
          name: clone-sync-delete-policy-without-orphan-downstream
  - name: sleep
    try:
    - sleep:
        duration: 3s
  - name: check that the cloned downstream is deleted
    try:
    - error:
        file: secret-error.yaml
